# lafayette-router-ansible

./: .ansible-lint.yaml  README.md  ansible.cfg  ips.txt  negative_cidr.py  pyproject.toml
ansible_collections/net/lafayette/: README.md  galaxy.yml
ansible_collections/net/lafayette/roles/connection/: README.md
ansible_collections/net/lafayette/roles/dnsmasq/: README.md
ansible_collections/net/lafayette/roles/firewalld/: README.md
ansible_collections/net/lafayette/roles/libdnf/: README.md
ansible_collections/net/lafayette/roles/networking/: README.md
ansible_collections/net/lafayette/roles/nginx/: README.md
ansible_collections/net/lafayette/roles/opensmtpd/: README.md
ansible_collections/net/lafayette/roles/podman/: README.md
ansible_collections/net/lafayette/roles/python/: README.md
ansible_collections/net/lafayette/roles/sftp_server/: README.md
ansible_collections/net/lafayette/roles/sftp_server_user/: README.md
ansible_collections/net/lafayette/roles/sys_router/: README.md
inventory/: 01_marquis.yaml  02_monolith.yaml  03_yorktown.yaml
playbooks/: deluged.yaml  dnsmasq-base.yaml  dnsmasq.yaml  firewalld.yaml  main.yaml  networking.yaml  nginx.yaml  opensmtpd.yaml  pihole.yaml  samba.yaml  setup-subnets.yaml  sftp-server.yaml  sftp-user.yaml  wiki.yaml  wireguard-client.yaml  wireguard-vlan.yaml
playbooks/roles/connection/tasks/: main.yaml
playbooks/roles/connection/vars/: main.yaml
playbooks/roles/dnsmasq/tasks/: main.yaml
playbooks/roles/dnsmasq/templates/: dnsmasq.conf.j2
playbooks/roles/dnsmasq/vars/: main.yaml
playbooks/roles/subnet/tasks/: main.yaml
playbooks/roles/subnet/vars/: main.yaml
roles/subnet-connection/tasks/: main.yaml
(+87 files in other folders)
