[tool.poetry]
name = "lafayette-router-ansible"
version = "0.1.0"
description = ""
authors = ["Filip Sufitchi <fsufitchi@gmail.com>"]
readme = "README.md"

packages = [{ include = "ansible_collections" }]

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^11.1.0"
ansible-vault = "^2.1.0"
ansible-lint = { version = "*", markers = 'platform_system != "Windows"' }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
