[tool.poetry]
name = "lafayette-router-ansible"
version = "0.1.0"
description = ""
authors = ["Filip Sufitchi <fsufitchi@gmail.com>"]
readme = "README.md"

packages = [{ include = "ansible_collections" }]

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^11.1.0"
ansible-vault = "^2.1.0"
ansible-lint = { version = "*", markers = 'platform_system != "Windows"' }
passlib = "^1.7.4"

[tool.poetry.group.dev.dependencies]
click = "^8.1.8"
flake8-pyproject = "^1.2.3"
black = "^25.1.0"
flake8 = "^7.2.0"
podman = "^5.4.0.1"

[tool.flake8]
extend-ignore = [
    "E501", # line too long
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
